# cardamom-preprocessor

./: .gitignore  CHANGES_SUMMARY.md  CLAUDE.md  README.md  README_PHASE1.md  README_PHASE3.md  README_PHASE4.md  batch-convert-drawio-to-pdf.sh  batch-convert.sh  environment.yml  pyproject.toml  requirements.txt  run_tests.py  test_batch_download.py  test_cbf_met.py  test_consolidation.py  test_noaa_download.py
.maap/: README.md  algorithm_config.yaml  build.sh  dps_wrapper.py  run.sh
ecmwf/: README.md  ecmwf_downloader.py
ogc/: Dockerfile  README.md
plans/: 2m_temp_lifecycle.xml.drawio  AGENT_ONBOARDING.md  CBF_IMPLEMENTATION_SUMMARY.md  MIGRATION_NOTES.md  README.md  README_PHASE1.md  README_PHASE2.md  README_PHASE8.md  STAC_IMPLEMENTATION_SUMMARY.md  burned-area-lifecycle.xml.drawio  co2-lifecycle.xml.drawio  co2_variable_lifecycle.md  configuration_hierarchy.md  gemini.md  gfed_variable_lifecycle.md  input-output-cbf.drawio.xml  phase1_core_framework.md  phase2_downloaders.md  phase3_gfed_processor.md  phase4_diurnal_processor.md  phase5_netcdf_system.md  phase6_cbf_input_pipeline.md  phase6_pipeline_manager.md  phase7_cli_integration.md  phase8_scientific_utils.md  prec-lifecycle.xml.drawio  skt_variable_lifecycle.xml.drawio  snow-lifecycle.xml.drawio  ssrd-strd-lifecycle.xml.drawio  variable-lifecycle-diagram.drawio.xml  vpd_lifecycle.xml.drawio
src/: __init__.py  atmospheric_science.py  base_downloader.py  carbon_cycle.py  cardamom_preprocessor.py  cardamom_variables.py  cbf_cli.py  cbf_generator.py  cbf_main.py  cbf_met_processor.py  cbf_obs_handler.py  cms_flux_loader.py  config_manager.py  coordinate_systems.py  data_source_config.py  diurnal_calculator.py  diurnal_output_writers.py  diurnal_processor.py  downloader_factory.py  ecmwf_downloader.py  gfed_diurnal_loader.py  gfed_downloader.py  gfed_processor.py  logging_utils.py  met_driver_loader.py  modis_downloader.py  netcdf_infrastructure.py  noaa_downloader.py  quality_control.py  scientific_utils.py  stac_cli.py  stac_met_loader.py  stac_utils.py  statistics_utils.py  time_utils.py  units_constants.py  validation.py
tests/: __init__.py  test_config_manager.py  test_coordinate_systems.py  test_diurnal_processor.py  test_downloaders.py  (+6 more)
(+54 files in other folders)
